# im2vid

./: .env.example  .gitignore  ARCHITECTURE.md  CONFIG.md  EXAMPLES.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  run_bot.sh  setup.sh
.github/workflows/: tests.yml
alembic/: alembic.ini  env.py
alembic/versions/: .keep  20260504_170000_initial_schema.py  20260504_223000_add_generation_settings.py  20260504_235500_add_cancelled_generation_status.py  20260505_001500_make_generation_settings_not_null.py  20260505_003500_add_timeout_generation_status.py  20260505_021500_add_download_links.py  20260505_031500_add_download_link_file_metadata.py  20260505_041500_add_user_delivery_preference.py  20260507_234500_add_user_language_code.py  20260508_010000_add_payment_orders.py  20260508_020000_add_nowpayments_fields.py  20260508_030000_drop_crypto_payment_orders.py  20260508_040000_add_generation_delivery_recovery_fields.py  20260515_120000_add_referral_system_backend.py  20260515_130000_add_user_start_payload.py  20260515_140000_set_initial_user_balance_30.py  20260515_150000_expand_referral_code_length.py  20260515_160000_set_initial_user_balance_10.py
app/: __init__.py  __main__.py  config.py  database_url.py  main.py
app/bot/: __init__.py  error_messages.py  keyboards.py  language.py  middlewares.py  model_i18n.py  states.py
app/db/: __init__.py  base.py  models.py  repositories.py  session.py
app/i18n/: __init__.py  locales.py  translations.py
scripts/: audit_referrals.py  audit_wavespeed_model_contracts.py  backfill_referral_bonuses.py  check_i18n_consistency.py  parse_wavespeed_docs.py  sync_wavespeed_model_params.py
tests/: test_config.py  test_crypto_payments.py  test_download_links.py  test_error_messages.py  test_generation_balance_flow.py  test_generation_flow_reset.py  test_generation_service.py  test_i18n.py  test_keyboards.py  test_main.py  test_navigation_registry.py  test_nowpayments_service.py  test_nowpayments_webhook.py  test_parse_wavespeed_docs.py  test_payment_repository.py  test_payment_service.py  test_payments_router.py  test_profile_router.py  test_r2_storage.py  test_referrals.py  test_stars_wallet_webhook.py  test_telegram_files.py  test_wallet_bot.py  test_wavespeed_service.py
tmp/: user-facing-texts.md
wallet_bot/: README.md  __init__.py  main.py
(+39 files in other folders)
