[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-bot-aiogram"
version = "1.0.0"
description = "Telegram Bot with aiogram 3, SQLAlchemy async, and Wavespeed API integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["telegram", "bot", "aiogram", "asyncio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
]

dependencies = [
    "aiogram==3.4.1",
    "SQLAlchemy==2.0.23",
    "alembic==1.13.1",
    "aiosqlite==0.19.0",
    "asyncpg==0.29.0",
    "httpx==0.25.2",
    "boto3==1.39.3",
    "pydantic-settings==2.1.0",
    "pydantic==2.5.0",
    "python-dotenv==1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.12.0",
    "flake8==6.1.0",
    "mypy==1.7.1",
    "isort==5.13.2",
]

postgres = ["asyncpg==0.29.0"]
sqlite = ["aiosqlite==0.19.0"]

[project.urls]
Homepage = "https://github.com/yourusername/telegram-bot"
Repository = "https://github.com/yourusername/telegram-bot.git"
Issues = "https://github.com/yourusername/telegram-bot/issues"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = ["aiosqlite", "asyncpg"]
ignore_missing_imports = true
